Fix the z-index of the log viewer dialog to be higher than the menu.
The ddsmoothmenu uses a z-index of 1000, so set the default jquery
ui-front class z-index to be 1001 so popups, dialogs, etc. will
display over the menu instead of behind.

--- a/www/css/fpp.css
+++ b/www/css/fpp.css
@@ -138,6 +138,11 @@
 	width: 200px;
 }
 
+.ui-front
+{
+	z-index: 1001;
+}
+
 #fppMenu ul li
 {
 	width: 25%;
